--- a/kernel_graph.html
+++ b/kernel_graph.html
@@ -32,7 +32,7 @@
 
              #mynetwork {
                  width: 100%;
-                 height: 2400;
+                 height: 2000px;
                  background-color: #000000;
                  border: 1px solid lightgray;
                  position: relative;
@@ -45,8 +45,8 @@
                  top:0px;
                  left:0px;
                  width: 100%;
-                 height: 2400;
-                 background-color:rgba(200,200,200,0.8);
+                 height: 2000px;
+                 background-color: black;
                  -webkit-transition: all 0.5s ease;
                  -moz-transition: all 0.5s ease;
                  -ms-transition: all 0.5s ease;
@@ -147,12 +147,14 @@
               var originalNodes;
               var network;
               var container;
-              var options, data;
+              var options;
+              var data;
               var filter = {
                   item : '',
                   property : '',
                   value : []
               };
+
 
               
 
@@ -177,7 +179,21 @@
                   // adding nodes and edges to the graph
                   data = {nodes: nodes, edges: edges};
 
-                  var options = {"hierarchical": {"enabled": true, "levelSeparation": 4000, "nodeSpacing": 32000, "treeSpacing": 8000, "directed": "UD", "sortMethod": "directed"}};
+                  var options = {
+                      "hierarchical":
+                          {
+                              "enabled": true,
+                              "levelSeparation": 4000,
+                              "nodeSpacing": 32000,
+                              "treeSpacing": 8000,
+                              "directed": "UD",
+                              "sortMethod": "directed",
+                          },
+                      "layout":
+                          {
+                          "randomSeed": 1,
+                          },
+                  };
 
                   
 
